Fixed many glitches on IE and Android Chrome
- IE11 does not support calc in css transforms
- Removed shapeshifter from init if is not a desktop
- Various CSS tweaks for link curtain effect
- Adjusted the offset of when the SVG Animations should play

--- a/_scss/components/_link_curtain.scss
+++ b/_scss/components/_link_curtain.scss
@@ -19,11 +19,13 @@
 
 	&::before {
 		background: transparent;
+		transform: translate3d(0, 100%, 0) translate3d(0, -3px, 0);
 		transform: translate3d(0, calc(100% - 3px), 0);
 		transition-delay: .3s;
 	}
 
 	&::after {
+		transform: translate3d(0, -100%, 0) translate3d(0, -3px, 0);
 		transform: translate3d(0, calc(-100% - 3px), 0);
 		z-index: -1;
 	}
