--- a/_scss/modules/_post.scss
+++ b/_scss/modules/_post.scss
@@ -77,11 +77,11 @@ $post-nav-arrow-width: 2em;
 }
 
 .post-nav__arrow--right {
-	transform: translate3d(-$post-nav-arrow-width, 0, 0);
+	transform: translate3d(-$post-nav-arrow-width - 0.1, 0, 0);
 }
 
 .post-nav__arrow--left {
-	transform: translate3d(0, 0, 0);
+	transform: translate3d(0.1em, 0, 0);
 }
 
 //hover
